@@ -949,8 +949,8 @@ function rcube_webmail()
         // Reset the auto-save timer
         clearTimeout(this.save_timer);
 
-        // compose form did not change
-        if (this.cmp_hash == this.compose_field_hash()) {
+        // compose form did not change (and draft wasn't saved already)
+        if (this.draft_saved && this.cmp_hash == this.compose_field_hash()) {
           this.auto_save_start();
           break;
         }
@@ -3345,6 +3345,7 @@ function rcube_webmail()
 
   this.set_draft_id = function(id)
   {
+    this.draft_saved = id;
     $("input[name='_draft_saveid']").val(id);
   };
 
